# internal/api/voice_settings.go
@@ -72,7 +72,7 @@ type updateVoiceGatewayRequest struct {
 // handleGetVoiceGateway 
 //
 // @Summary      GetVoiceGateway
-// @Tags         settings
+// @Tags         settings, mcp-auto
 // @Produce      json
 // @Success      200  {object}  map[string]interface{}  "成功"
 // @Failure      400  {object}  map[string]interface{}  "参数错误"
